<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>h264_camera_driver</name>
  <version>0.1.0</version>
  <description>ROS2 camera driver for IMX678 sensor on NVIDIA Jetson AGX Orin</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- Build tool dependency -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <!-- NO cv_bridge! We manually construct messages -->

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>