<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"?>

<package format="3">
    <name>fake_camera_driver</name>
    <version>0.0.1</version>
    <description>test ros2 boilerplate</description>

    <maintainer email="softwarei@beex.as">Denzel</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>
    <depend>cv_bridge</depend>
    <depend>opencv</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>